<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                tools:context=".AMainActivity">

    <TextView
        android:id="@+id/activity_main_command_string_label"
        android:text="@string/enter_input_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/activity_main_command_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="flagNoFullscreen"
        android:inputType="text"
        android:hint="@string/input_data_hint"/>

    <Button
        android:id="@+id/select_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/select_from_sample_data"
        android:onClick="onSelectClick"/>

    <Button
        android:id="@+id/process_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/process"
        android:onClick="onProcessClick"/>

    <TextView
        android:id="@+id/output_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/output"/>

    <TextView
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceMedium"
        tools:text="CLR\nCO 0 255 0 255;\nMV (0, 0);\nPEN DOWN;\nMV (4000, 4000);\nPEN UP;"/>

  </LinearLayout>

</ScrollView>